--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-danger rounded-bottom ">
+<nav class="navbar navbar-expand-lg bg-primary rounded-bottom ">
     <div class="container-fluid ">
         <a class="navbar-brand d-flex justify-content-center align-items-center" href="/blog">
             <img src="/images/clockLogo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-info fs-5" aria-current="page" href="#">Home</a>
+            <a class="nav-link active text-info fs-5" aria-current="page" href="/blog">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white fs-5" href="#">Post</a>
