--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary rounded-bottom ">
+<nav class="navbar navbar-expand-lg bg-primary rounded-bottom p-0 px-md-5">
     <div class="container-fluid ">
         <a class="navbar-brand d-flex justify-content-center align-items-center" href="/blog">
             <img src="/images/clockLogo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
