--- a/views/Blog/Edit.ejs
+++ b/views/Blog/Edit.ejs
@@ -1,10 +1,10 @@
 <%- layout('./layout/boilerplate.ejs') %>
 <main class="container mt-5 w-50 border border-primary rounded px-4 py-4">
     <h1 class="mb-4">Create a Blog Post</h1>
-    <form action="/blog/<%=data.id%>?_method=PATCH" method="post">
+    <form action="/blog/<%=data.id%>?_method=PATCH" method="post" enctype="multipart/form-data">
         <div class="mb-3">
-            <label for="image" class="form-label">Image URL</label>
-            <input type="text" class="form-control" id="image" name="image" placeholder="Enter image URL" value="<%= data.image %>">
+            <label for="image" class="form-label">Upload Image</label>
+            <input type="file" class="form-control" id="image" name="image">
         </div>
         <div class="mb-3">
             <label for="category" class="form-label">Category</label>
