--- a/views/Blog/userPost.ejs
+++ b/views/Blog/userPost.ejs
@@ -1,1 +1,33 @@
 <%- layout('./layout/boilerplate.ejs') %>
+<div class="container mt-5">
+    <h1 class="mb-4">My Blog Posts</h1>
+
+    <!-- Search Form -->
+    <form id="searchForm" class="mb-4" action="/blog/userPost" method="get">
+      <div class="input-group">
+        <input type="text" id="searchInput" class="form-control" placeholder="Search blog posts" name="title">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+    </form>
+
+    <!-- Blog Posts List -->
+    <div id="blogPosts" class="list-group mt-5">
+      <!-- Example blog post item -->
+       <% blog.forEach(element => { %>
+        <div class="list-group-item d-flex justify-content-between align-items-center">
+            <div class="ms-2 me-auto">
+              <div class="fw-bold"><%= element.title %> <span><a href="/blog/<%= element.id %>" class="text-decoration-none">🔗</a></span></div>
+            <p><%=formateDate(element.blogDate)%></p>
+            </div>
+            <div class="btn-group d-flex justify-content-center align-items-center">
+              <a class="btn btn-warning btn-md me-2" href="/blog/<%= element.id %>/edit">Edit</a>
+                <form action="/blog/<%= element.id %>?_method=DELETE" method="post">
+                    <button class="btn btn-danger btn-md">Delete</button>
+                </form>
+            </div>
+          </div>
+       <% }) %>
+     
+      <!-- Add more blog post items here -->
+    </div>
+  </div>
