--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,28 +1,31 @@
 <nav class="navbar navbar-expand-lg bg-primary rounded-bottom p-0 px-md-5">
-    <div class="container-fluid ">
+    <div class="container  ">
         <a class="navbar-brand d-flex justify-content-center align-items-center" href="/blog">
             <img src="/images/clockLogo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
             <span class="text-white fs-3" style="transform: rotate(-10deg);">Timely</span>
           </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse pb-3 pb-md-0 " id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-md-center justify-content-md-center w-100">
           <li class="nav-item">
-            <a class="nav-link active text-info fs-5" aria-current="page" href="/blog">Home</a>
+            <a class="nav-link <%= currentPath === '/blog' ? 'text-info fs-4 border-white border-bottom' : 'text-white fs-5' %>" aria-current="page" href="/blog">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white fs-5" href="#">Post</a>
+            <a class="nav-link <%= currentPath === '/blog/userPost' ?  'text-info fs-4 border-white border-bottom' : 'text-white fs-5'  %>" href="/blog/userPost">Post</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white fs-5" aria-disabled="true">Contact</a>
+            <a class="nav-link <%= currentPath === '/blog/contact' ?  'text-info fs-4 border-white border-bottom' : 'text-white fs-5'  %>" href="#" >Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  <%= currentPath === '/blog/about' ?  'text-info fs-4 border-white border-bottom' : 'text-white fs-5'  %>" href="#" >About</a>
           </li>
         </ul>
-        <!-- <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form> -->
+        <form class="<%= currentPath === '/blog'? 'd-flex' : 'invisible' %>" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="title" >
+          <button class="btn btn-primary" type="submit">Search</button>
+        </form>
       </div>
     </div>
   </nav>
