--- a/views/Blog/userPost.ejs
+++ b/views/Blog/userPost.ejs
@@ -1,6 +1,10 @@
 <%- layout('./layout/boilerplate.ejs') %>
 <div class="container mt-5">
-    <h1 class="mb-4">My Blog Posts</h1>
+    <div class="d-flex justify-content-between align-items-center">
+        <h1 class="mb-4">My Blog Posts</h1>
+        <a href="/blog/newBlog" class="btn btn-md btn-outline-primary">Add New Blog</a>
+    </div>
+    
 
     <!-- Search Form -->
     <form id="searchForm" class="mb-4" action="/blog/userPost" method="get">
