--- a/views/Blog/newBlogForm.ejs
+++ b/views/Blog/newBlogForm.ejs
@@ -1,5 +1,5 @@
 <%- layout('./layout/boilerplate.ejs') %>
-<main class="container mt-5 w-50 border border-primary rounded px-4 py-4">
+<main class="container-md mt-5 mx-auto  border border-primary rounded px-4 py-4">
     <h1 class="mb-4">Create a Blog Post</h1>
     <form action="/blog" method="post" enctype="multipart/form-data" id="blogForm" novalidate>
         <div class="mb-3">
