--- a/views/Blog/userPost.ejs
+++ b/views/Blog/userPost.ejs
@@ -1,8 +1,8 @@
 <%- layout('./layout/boilerplate.ejs') %>
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center">
-        <h1 class="mb-4">My Blog Posts</h1>
-        <a href="/blog/newBlog" class="btn btn-md btn-outline-primary">Add New Blog</a>
+        <h1 class="mb-md-4">My Blog Posts</h1>
+        <a href="/blog/newBlog" class="btn btn-md btn-outline-primary mb-md-4 mb-2">Add New Blog</a>
     </div>
     
 
