--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -13,8 +13,8 @@ html{
 }
 
 .blog-image-dimension{
-    height: 400px;
-    aspect-ratio: 4/5;
+    height: 200px;
+    aspect-ratio: 4/3;
     object-fit: cover;
 }
 .blog-synopsis {
@@ -53,20 +53,64 @@ html{
 }
 #blog::first-letter{
     float: left;
-    font-size: 3em; 
+    font-size: 2.5em; 
     line-height: 1;
     margin-bottom: -0.5em;
     position: relative;
     top: 0.2em; 
-    color: #3B82F6;
+    color: var(--accent-color);
 }
 
+
+
 .title{
-    font-size: clamp(1rem,2.5vw, 3rem) !important;
+    font-size: clamp(1rem,2vw, 2.5rem) !important;
     font-weight: 700 !important;
 }
 
 .author{
-    font-size: clamp(1rem,1.5vw, 2rem) !important;
-    font-weight: 700 !important;
+    font-size: clamp(1rem,1vw, 1.5rem) !important;
+    font-weight: 300 !important;
+}
+
+.list-unstyled li {
+    padding: .25em .5em;
+    border-bottom: 1px solid var(--accent-color);
+    transition: all 200ms ;
+}
+
+.list-unstyled li a{
+    transition: all 200ms ;
+    width: 100%;
+}
+
+.list-unstyled li:hover{
+    background-color: white !important;
+}
+
+.list-unstyled li:hover a{
+    color: var(--primary) !important;
+}
+
+
+
+.list-unstyled li:first-child:hover{
+    border-radius: .25em .25em 0 0;
+}
+.list-unstyled li:last-child:hover{
+    border-radius: 0 0 .25em .25em;
+}
+
+.card{
+    transition: box-shadow 500ms;
+}
+
+.card:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+}
+
+.form-container{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    min-width: 300px;
+    max-width: 800px !important;
 }
