--- a/views/Blog/userPost.ejs
+++ b/views/Blog/userPost.ejs
@@ -1,32 +1,32 @@
 <%- layout('./layout/boilerplate.ejs') %>
-<div class="container mt-5">
+<div class="container mt-3">
     <div class="d-flex justify-content-between align-items-center">
         <h1 class="mb-md-4">My Blog Posts</h1>
-        <a href="/blog/newBlog" class="btn btn-md btn-outline-primary mb-md-4 mb-2">Add New Blog</a>
+        <a href="/blog/newBlog" class="btn btn-sm btn-outline-primary mb-md-4 mb-2">Add New Blog</a>
     </div>
     
 
     <!-- Search Form -->
-    <form id="searchForm" class="mb-4" action="/blog/userPost" method="get">
-      <div class="input-group">
+    <form id="searchForm" class="mb-2" action="/blog/userPost" method="get">
+      <div class="input-group input-group-sm">
         <input type="text" id="searchInput" class="form-control" placeholder="Search blog posts" name="title">
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-sm btn-primary">Search</button>
       </div>
     </form>
 
     <!-- Blog Posts List -->
-    <div id="blogPosts" class="list-group mt-5">
+    <div id="blogPosts" class="list-group mt-3">
       <!-- Example blog post item -->
        <% blog.forEach(element => { %>
         <div class="list-group-item d-flex justify-content-between align-items-center">
             <div class="ms-2 me-auto">
               <div class="fw-bold"><%= element.title %> <span><a href="/blog/<%= element.id %>" class="text-decoration-none">🔗</a></span></div>
-            <p><%=formateDate(element.blogDate)%></p>
+            <p class="m-0 small text-secondary"><%=formateDate(element.blogDate)%></p>
             </div>
             <div class="btn-group d-flex justify-content-center align-items-center">
-              <a class="btn btn-warning btn-md me-2" href="/blog/<%= element.id %>/edit">Edit</a>
+              <a class="btn btn-warning btn-sm me-2" href="/blog/<%= element.id %>/edit">Edit</a>
                 <form action="/blog/<%= element.id %>?_method=DELETE" method="post">
-                    <button class="btn btn-danger btn-md">Delete</button>
+                    <button class="btn btn-danger btn-sm">Delete</button>
                 </form>
             </div>
           </div>
