--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,42 +1,56 @@
 <nav class="navbar navbar-expand-lg bg-primary rounded-bottom p-0 px-md-5">
-    <div class="container-fluid">
-        <a class="navbar-brand d-flex justify-content-center align-items-center" href="/blog">
-            <img src="/images/clockLogo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
-            <span class="text-white fs-3" style="transform: rotate(-10deg);">Timely</span>
-          </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      <div class="collapse navbar-collapse pb-3 pb-md-0 " id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-md-center justify-content-md-center ">
+  <div class="container-fluid">
+    <a class="navbar-brand d-flex justify-content-center align-items-center" href="/">
+      <img src="/images/clockLogo.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+      <span class="text-white fs-5" style="transform: rotate(-10deg);">Timely</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <% if (currentPath!=='/') { %>
+     
+   
+    <div class="collapse navbar-collapse pb-3 pb-md-0 " id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0 d-flex align-items-lg-center  justify-content-md-center ">
+        <li class="nav-item">
+          <a class="nav-link fs-6 <%= currentPath === '/blog' ? 'text-info  border-white border-bottom' : 'text-white ' %>"
+            aria-current="page" href="/blog">Home</a>
+        </li>
+        <% if (currentUser) { %>
           <li class="nav-item">
-            <a class="nav-link fs-5 <%= currentPath === '/blog' ? 'text-info  border-white border-bottom' : 'text-white ' %>" aria-current="page" href="/blog">Home</a>
+            <a class="nav-link fs-6 <%= currentPath === '/blog/userPost' ?  'text-info  border-white border-bottom' : 'text-white'  %>"
+              href="/blog/userPost">Post</a>
           </li>
-          <% if (currentUser) { %>
+          <% } %>
             <li class="nav-item">
-              <a class="nav-link fs-5 <%= currentPath === '/blog/userPost' ?  'text-info  border-white border-bottom' : 'text-white'  %>" href="/blog/userPost">Post</a>
+              <a class="nav-link fs-6 <%= currentPath === '/blog/contact' ?  'text-info  border-white border-bottom' : 'text-white '  %>"
+                href="#">Contact</a>
             </li>
-          <% } %>
-          <li class="nav-item">
-            <a class="nav-link fs-5 <%= currentPath === '/blog/contact' ?  'text-info  border-white border-bottom' : 'text-white '  %>" href="#" >Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5 <%= currentPath === '/blog/about' ?  'text-info  border-white border-bottom' : 'text-white '  %>" href="#" >About</a>
-          </li>
-        </ul>
-        <div class="d-md-flex align-items-md-center " style="gap: 10px;">
+            <li class="nav-item">
+              <a class="nav-link fs-6 <%= currentPath === '/blog/about' ?  'text-info  border-white border-bottom' : 'text-white '  %>"
+                href="#">About</a>
+            </li>
+      </ul>
+      <% } %>
+      <div class="d-flex flex-column flex-lg-row align-items-lg-center pb-2 pb-lg-0" style="gap: 10px;">
 
-          <% if (currentUser) { %>
-            <a href="/user/logout" class="btn btn-md btn-light text-secondary">Logout</a>
-            <% } else { %>
-              <a href="/user/login" class="btn btn-md btn-light text-secondary">Login</a>
-              <a href="/user/signup" class="btn btn-md btn-light text-secondary">Signup</a>
-          <% } %>
-        <form class="<%= currentPath === '/blog'? 'd-flex' : 'd-none' %>" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="title" >
-          <button class="btn btn-primary" type="submit">Search</button>
-        </form>
-        </div>
+        <% if (currentUser) { %>
+          <p class="text-white m-0 fs-6" style="min-width: fit-content;">Welcome! <%= currentUser.email%></p>
+          <a href="/user/logout" class="btn btn-sm btn-light text-secondary">Logout</a>
+          <% } else { %>
+            <div class="d-flex flex-column flex-md-row" style="gap: 10px;">
+              <a href="/user/login" class="btn btn-sm btn-light text-secondary">Login</a>
+              <a href="/user/signup" class="btn btn-sm btn-light text-secondary">Signup</a>
+            </div>
+            <% } %>
+              <form class="<%= currentPath === '/blog'? 'd-flex' : 'd-none' %>" role="search">
+                <div class="input-group input-group-sm">
+                  <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search" name="title">
+                </div>
+                <button class="btn btn-sm btn-primary" type="submit">Search</button>
+              </form>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
